# ai-quality-daily

./: .gitignore  README.md
jobscout/: .env.example  README.md  pyproject.toml
jobscout/eval/results/: v1-run-001.txt  v1-summary.md  v2-run-001.txt  v2-summary.md  v3-run-001.txt  v3-summary.md  v4-fit-demo-001.txt  v4-run-001.txt  v4-smoketest-001.txt  v4-summary.md
jobscout/shared/: mock_jobs.py
jobscout/v1/: QUICKSTART.md  README.md  SPEC.md  agent.py  run.py  state.py  tools.py
jobscout/v1/tests/: run_tasks.py  tasks.py
jobscout/v2/: README.md  SPEC.md  agent.py  run.py  schemas.py  search_adapter.py  state.py  tools.py
jobscout/v2/tests/: run_tasks.py  tasks.py
jobscout/v3/: README.md  orchestrator.py  parent_state.py  run.py  schemas.py  search_adapter.py
jobscout/v3/agents/: analyzer.py  planner.py  searcher.py
jobscout/v3/tests/: run_tasks.py
jobscout/v4/: README.md  mcp_client.py  orchestrator.py  parent_state.py  run.py  schemas.py  search_adapter.py
jobscout/v4/agents/: analyzer.py  fit_analyzer.py  planner.py  searcher.py
jobscout/v4/tests/: run_tasks.py  tasks.py
